--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <a-scene id="scene" physics="debug:false">
 
-    <!--Assets-->
+    <!--Recursos-->
     <a-assets>
       <a-asset-item id="shooter" src="./models/soldier/scene.gltf"></a-asset-item>
 
@@ -33,7 +33,7 @@
     </a-entity>
 
     <!--
-      A-Frame Environment preset values to choose from:
+      Valores predefinidos de A-Frame Environment que se pueden usar:
 
       none, default, contact, egypt, checkerboard, forest,
       goaland, yavapai, goldmine, threetowers, poison, arches,
@@ -41,16 +41,16 @@
     
     -->
 
-    <!--Sounds-->
+    <!--Sonidos-->
     <a-entity id="sound1" sound="src: #shoot; poolSize:2; autoplay: false; volume: 1;loop:false"></a-entity>
     <a-entity id="sound2" sound="src: #footstep; poolSize:2;autoplay: false; volume: 4;loop:false"></a-entity>
 
 
-    <!--Light-->
+    <!--Luces-->
     <a-entity light="type: ambient; color: white; intensity:0.5"></a-entity>
     <a-entity light="type: directional; color: #EEE; intensity: 1" position="-1 1 0"></a-entity>
 
-    <!--Camera and Cursor-->
+    <!--Cámara y cursor-->
     <a-entity id="camera" camera position="0 1.6 0" wasd-controls="acceleration:500"
       look-controls="pointerLockEnabled: false">
       <a-entity id="weapon" gltf-model="#shooter" position="0 -2.6 -0.2" rotation="-20 -145 20" scale="0.05 0.05 0.05"
@@ -59,29 +59,29 @@
       <a-cursor></a-cursor>
     </a-entity>
 
-    <!--Bullets-->
+    <!--Balas-->
     <a-entity bullets="position:0 0 -5"></a-entity>
 
-    <!--Ground-->
+    <!--Terreno-->
     <a-plane id="ground" repeat="200 200" position="0 0 0" rotation="-90 0 0" height="200"
       width="200" static-body visible="false">
     </a-plane>
 
-    <!--Left wall-->
+    <!--Muro izquierdo-->
     <a-box id="right-wall" material="color: #34548d" color="red" repeat="10 1 1" position="25 5 -15" rotation="0 -90 0"
       height="10" width="50" depth="1" static-body visible="true">
     </a-box>
-    <!--Right wall-->
+    <!--Muro derecho-->
     <a-box id="left-wall" material="color: #34548d" color="red" repeat="10 1 1" position="-25 5 -15" rotation="0 90 0"
       height="10" width="50" depth="1" static-body visible="true">
     </a-box>
 
-    <!--Back wall-->
+    <!--Muro atrás-->
     <a-box id="back-wall" material="color: #34548d" color="red" repeat="10 1 1" position="0 5 -40" rotation="0 0 0"
       height="10" width="50" depth="1" static-body visible="true">
     </a-box>
 
-    <!--Paintball Arena Walls-->
+    <!--Muro de la arena de paintball-->
     <a-entity>
       <a-plane src="#wallTexture" id="wall1" material="color: " geometry="height: 2.5; width: 25"
         position="8.24437 1.25 -16.52437" rotation="0 45 0" static-body visible="true">
